objects/alm_pm2__VC_Repository__c.object
<CustomObject>
 <fullName>alm_pm2__VC_Repository__c</fullName>
 <fields>
  <fullName>alm_pm2__Host__c</fullName>
  <label>Host</label>
  <type>Picklist</type>
  <valueSet>
   <restricted>true</restricted>
   <valueSetDefinition>
    <value>
     <fullName>GitHub</fullName>
    </value>
    <value>
     <fullName>Bitbucket</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__Organization_Name__c</fullName>
  <label>Host Organization Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Repository_URL__c</fullName>
  <description>The SSH URL of the version control system repository.</description>
  <inlineHelpText>The SSH URL of the version control system repository. This URL may explicitly specify the "ssh://" protocol or, as in the case of some VC services (e.g. GitHub), the URL may have its own unique syntax.</inlineHelpText>
  <label>Repository URL</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <label>VC Repository</label>
 <listViews>
  <fullName>alm_pm2__All</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <label>VC Repository Name</label>
  <type>Text</type>
 </nameField>
 <pluralLabel>VC Repositories</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>